syntax = "proto3";

package authlayer.v1;

option go_package = "github.com/bernardoforcillo/authlayer/pkg/proto/authlayer/v1;authlayerv1";

import "authlayer/v1/common.proto";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  UserInfo user = 1;
}

message UpdateUserRequest {
  string user_id = 1;
  optional string name = 2;
  optional string avatar = 3;
}

message UpdateUserResponse {
  UserInfo user = 1;
}

message DeleteUserRequest {
  string user_id = 1;
}

message DeleteUserResponse {}

message ListUsersRequest {
  PaginationRequest pagination = 1;
  optional string search = 2;
  optional UserStatus status = 3;
}

message ListUsersResponse {
  repeated UserInfo users = 1;
  PaginationResponse pagination = 2;
}

message ChangePasswordRequest {
  string current_password = 1;
  string new_password = 2;
}

message ChangePasswordResponse {}
